Adjusted the position of the version panel. Edited README file. Fixed the issue of News section not showing any news in the release version (set two different news URLs for development (with CORS proxy) and production (without CORS proxy) environments respectively).

--- a/src/views/pages/profiles/LoginPage.less
+++ b/src/views/pages/profiles/LoginPage.less
@@ -329,7 +329,7 @@
 
     .version-panel {
         position: absolute;
-        bottom: 0.2rem;
+        bottom: 2.2rem;
         right: 0.2rem;
         color: white;
         font-size: @smallFont;
