--- a/src/views/resources/css/common.less
+++ b/src/views/resources/css/common.less
@@ -404,7 +404,7 @@ button:disabled {
 }
 .version-panel {
     position: absolute;
-    right: 75px;
+    right: 2.2rem;
     bottom: 40px;
     color: white;
     font-size: 14px;
